--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "ViniciussAlencarr <vinicius.alencaarr@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev src/server.ts"
+    "start": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   },
@@ -18,6 +20,7 @@
     "reflect-metadata": "^0.1.13",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   }
 }
